src/objects/LAB_Account_Role_Detail__c.object
<CustomObject>
    <description>Object store Laboratory account role details</description>
    <fields>
        <fullName>Account_Role__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>relate to LAB Registry account role</description>
        <label>Account Role</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account_Role__c.Functional_Role__c</field>
                <operation>equals</operation>
                <value>Lab Registry</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account_Role__c</referenceTo>
        <relationshipLabel>LAB Account Role Details</relationshipLabel>
        <relationshipName>LAB_Account_Role_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Certifications__c</fullName>
        <description>Additional Certifications</description>
        <inlineHelpText>Additional Certifications. To be populated if &quot;Additional certifications in place&quot; is YES</inlineHelpText>
        <label>Additional Certifications</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_certifications_in_place__c</fullName>
        <description>Do you have any additional certifications in place?</description>
        <inlineHelpText>Do you have any additional certifications in place?</inlineHelpText>
        <label>Additional certifications in place?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Generic_YES_NO_NA</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Airline_Name__c</fullName>
        <formula>Partner_Airline__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Airline Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Are_your_labs_part_of_national_platform__c</fullName>
        <description>Form question: Is there a National Platform in place that you need to communicate tests results to?</description>
        <inlineHelpText>Form question: Is there a National Platform in place that you need to communicate tests results to?</inlineHelpText>
        <label>Are your labs part of national platform?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Generic_YES_NO_NA</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CountryName__c</fullName>
        <formula>Operating_Country__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CountryName</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_you_issue_test_results_for_all_lab__c</fullName>
        <description>Form Question: Do you issue test results for all locations indicated?</description>
        <inlineHelpText>Form Question: Do you issue test results for all locations indicated?</inlineHelpText>
        <label>Do you issue test results for all lab?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Generic_YES_NO_NA</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Do_you_manage_booking_for_all_locations__c</fullName>
        <description>Do you manage test appointment booking for all the locations indicated?</description>
        <inlineHelpText>Form Question: Do you manage test appointment booking for all the locations indicated?</inlineHelpText>
        <label>Do you manage booking for all locations?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Generic_YES_NO_NA</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Endorsed_by_governments__c</fullName>
        <description>Are your labs part of any national platform/endorsed by a government?</description>
        <inlineHelpText>Are your labs part of any national platform/endorsed by a government?</inlineHelpText>
        <label>Are your labs endorsed by government?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Generic_YES_NO_NA</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Existing_partnership_with_airlines__c</fullName>
        <description>Form question: Do you have existing partnership(s) with airlines?</description>
        <inlineHelpText>Form question: Do you have existing partnership(s) with airlines?</inlineHelpText>
        <label>Existing partnership with airlines?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Generic_YES_NO_NA</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_Many_Lab__c</fullName>
        <defaultValue>0</defaultValue>
        <description>How many lab are present in the selected country</description>
        <label>How Many Lab?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>How_long_have_you_been_in_the_business__c</fullName>
        <description>Form question: How long have you been in the business?</description>
        <inlineHelpText>Form question: How long have you been in the business?</inlineHelpText>
        <label>How long have you been in the business?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Less than 1 year</fullName>
                </value>
                <value>
                    <fullName>1-2 years</fullName>
                </value>
                <value>
                    <fullName>2+ years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lab_Type__c</fullName>
        <description>Lab Type. It will be reflected into record-type and will guide the survey</description>
        <label>Lab Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>IT Integrator</fullName>
                </value>
                <value>
                    <fullName>Aggregator</fullName>
                </value>
                <value>
                    <fullName>Independent</fullName>
                </value>
                <value>
                    <fullName>Lab Network</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>National_accreditation_for_all_the_labs__c</fullName>
        <description>Form question: Do you have a National accreditation for all the labs?</description>
        <inlineHelpText>Form question: Do you have a National accreditation for all the labs?</inlineHelpText>
        <label>National accreditation for all the labs?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Generic_YES_NO_NA</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Nature_of_SLA__c</fullName>
        <description>Describe the nature of your SLA</description>
        <inlineHelpText>Describe the nature of your SLA. To be populated if &quot;Type of SLAs in place&quot; = YES</inlineHelpText>
        <label>Describe the nature of your SLA</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Operating_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>In which country is the lab operating</description>
        <label>Operating Country</label>
        <referenceTo>IATA_ISO_Country__c</referenceTo>
        <relationshipLabel>LAB Account Role Details</relationshipLabel>
        <relationshipName>LAB_Account_Role_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Operating_under_brand__c</fullName>
        <description>Are you operating under your own brand or another brand name?</description>
        <inlineHelpText>Form question: Are you operating under your own brand or another brand name?</inlineHelpText>
        <label>Are you operating under brand?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Generic_YES_NO_NA</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Detail_For_Airline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to link airline with survey</description>
        <label>(Airline) Parent Detail</label>
        <referenceTo>LAB_Account_Role_Detail__c</referenceTo>
        <relationshipLabel>Partner Airlines</relationshipLabel>
        <relationshipName>LAB_Account_Airlines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Detail_For_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to link countries operating in with parent survey</description>
        <label>(Country) Lab Detail</label>
        <referenceTo>LAB_Account_Role_Detail__c</referenceTo>
        <relationshipLabel>Operating Countries</relationshipLabel>
        <relationshipName>LAB_Account_Countries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Partner_Airline__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>To select a partner airline</description>
        <label>Partner Airline</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>LAB Account Role Details</relationshipLabel>
        <relationshipName>LAB_Account_Role_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type_of_SLAs_in_place__c</fullName>
        <description>Form Question: Do you have SLAs in place with your partner labs?</description>
        <inlineHelpText>Form Question: Do you have SLAs in place with your partner labs?</inlineHelpText>
        <label>Type of SLAs in place</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Generic_YES_NO_NA</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type_of_lab__c</fullName>
        <description>Form question: Please indicate the type of labs</description>
        <inlineHelpText>Form question: Please indicate the type of labs</inlineHelpText>
        <label>Type of lab</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Clinic</fullName>
                </value>
                <value>
                    <fullName>Laboratories</fullName>
                </value>
                <value>
                    <fullName>Mix</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Which_Governments__c</fullName>
        <description>Which Governments</description>
        <inlineHelpText>Which Governments. To be populated if &quot;Are your labs endorsed by government?&quot; is YES</inlineHelpText>
        <label>Which Governments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Which_National_Platform__c</fullName>
        <description>Which National Platform</description>
        <inlineHelpText>Which National Platform. To be populated if &quot;Are your labs part of national platform?&quot; is YES</inlineHelpText>
        <label>Which National Platform</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Which_Operating_Brand__c</fullName>
        <description>To indicate which operating brand when &quot;Are you operating under brand?&quot; is YES</description>
        <inlineHelpText>To indicate which operating brand when &quot;Are you operating under brand?&quot; is YES</inlineHelpText>
        <label>Which Operating Brand</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>onboarding_case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>relates to the case created when form is submitted</description>
        <label>Onboarding Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>LAB Account Role Details</relationshipLabel>
        <relationshipName>LAB_Account_Role_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>LAB Account Role Detail</label>
    <nameField>
        <displayFormat>LAB-{000000000}</displayFormat>
        <label>LAB Account Role Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LAB Account Role Details</pluralLabel>
    <recordTypes>
        <fullName>Aggregator</fullName>
        <active>true</active>
        <description>Recordtype for Aggregator Laboratories</description>
        <label>Aggregator</label>
    </recordTypes>
    <recordTypes>
        <fullName>Airline_agreement</fullName>
        <active>true</active>
        <description>Used to store which airlines a lab has agreement with</description>
        <label>Airline agreement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <description>Technical Recordtype to use in LWC</description>
        <label>Default</label>
    </recordTypes>
    <recordTypes>
        <fullName>IT_Integrator</fullName>
        <active>true</active>
        <description>Recordtype for IT Integrator Laboratories</description>
        <label>IT Integrator</label>
    </recordTypes>
    <recordTypes>
        <fullName>Independent</fullName>
        <active>true</active>
        <description>Recordtype for Independent Laboratories</description>
        <label>Independent</label>
    </recordTypes>
    <recordTypes>
        <fullName>Lab_Network</fullName>
        <active>true</active>
        <description>Recordtype for Lab Network</description>
        <label>Lab Network</label>
    </recordTypes>
    <recordTypes>
        <fullName>Operating_Country</fullName>
        <active>true</active>
        <description>Used to store in which country a lab operates</description>
        <label>Operating Country</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>